tests/compile_fail/invalid_name_value.rs
//! Test non-string name value error.

use angelscript::function;

#[function(name = 123)]
fn test_func() {}

fn main() {}
