tests/compile_fail/invalid_name_value.stderr
error: name value must be a string literal
 --> tests/compile_fail/invalid_name_value.rs:5:12
  |
5 | #[function(name = 123)]
  |            ^^^^
